--- a/#src/scss/mixins.scss
+++ b/#src/scss/mixins.scss
@@ -11,8 +11,8 @@
 
 
 @mixin responsive-size ($property, $maxSize, $minSize) {
-    //#{$property}: $maxSize+px;
+    #{$property}: $maxSize+px;
     @media (max-width:$maxWidthContainer+px) {
-        #{$property}: calc(#{$minSize+px} + (#{$maxSize} - #{$minSize}) * ((100vw - 320px) / (1270 - 320)));
+        #{$property}: calc(#{$minSize+px} + (#{$maxSize} - #{$minSize}) * ((100vw - 320px) / (1170 - 320)));
     }
 }
