--- a/#src/scss/footer.scss
+++ b/#src/scss/footer.scss
@@ -40,14 +40,10 @@
         padding: 35px 0;
     }
     &__row {
-        display: flex;
-        margin: 0 -97px 270px -97px;
-        @media (max-width:2000px) {
-            margin: 0 -57px 170px -57px;
-        }
-        @media (max-width:1300px) { 
-            margin: 0 -20px 65px -20px;
-        }
+        display: flex; 
+        margin: 0 -49px;
+        @include responsive-size(margin-bottom,135,40);
+
         @media (max-width:600px ) {
             flex-direction: column;
             text-align: center;
@@ -56,18 +52,9 @@
 
     &__column {
         flex: 0 1 50%;
-        padding: 0 97px;
+        padding: 0 49px; 
     
-        @media (max-width:2000px) {
-            padding: 0 57px;
-        }
-        @media (max-width:1300px) {
-            padding: 0 20px;
-        }
         @media (max-width:600px) {
-            img {
-                width: 150px;
-            }
             &:not(:last-child) {
                 margin-bottom: 15px;
             }
@@ -75,23 +62,20 @@
     }
 
     &__text {
-        font-size: 28px;
-        line-height: 28px;
+        font-size: 15px;
+        line-height: 15px; 
         font-weight: 300;
         text-transform: uppercase;
         color: #ffffff;
-        margin: 0 0 65px 0;
-        @include responsive-size(margin-bottom,55,15);
-        @include responsive-size(font-size,24,18);
+        @include responsive-size(margin-bottom,30,15);
     }
 
     &__links {
-        font-size: 28px;
-        line-height: 28px;
+        line-height: 14px;
         font-weight: 300;
         text-transform: uppercase;
         color: #ffffff;
-        @include responsive-size(font-size,24,18);
+        font-size: 14px;
     }
 
     &__phone {
@@ -116,23 +100,16 @@
     }
 
     &__socials {
-        margin: 0 -15px ;
-        @media (max-width:1500px) {
-            margin: 0 -8px;
-        }
+        margin: 0 -7px ;
     }
 
     &__link {
-        font-size: 28px;
+        font-size: 14px;
         font-weight: 400;
         text-transform: uppercase;
         color: #ffffff;
-        padding: 0 15px;
-        @include responsive-size(font-size,24,18);
+        padding: 0 7px;
         transition: all 0.3s ease 0s;
-        @media (max-width:1500px) {
-            padding: 0 8px;
-        }
         @media (any-hover:hover) {
             &:hover {
                 color: #ccc5c5;
@@ -142,38 +119,27 @@
 }
 
 .info-footer {
-    padding: 205px 0 45px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    @media (max-width:1700px) {
-        padding: 150px 0 45px 0;
-    }
-    @media (max-width:1900px) {
-        padding: 170px 0 45px 0;
-    }
-    @include responsive-size(padding-top,140,30);
+    @include responsive-size(padding-top,100,30);
+    @include responsive-size(padding-bottom,20,10);
+
     &__text {
-        font-size: 36px;
+        padding: 0 10px;
         line-height: 1.2;
         font-weight: 300;
         letter-spacing: 0.025em;
         color: #010101;
-        margin: 40px 0;
-        max-width: 905px;
-        @include responsive-size(font-size,24,18);
+        margin: 20px 0;
+        max-width: 450px;
+        @include responsive-size(font-size,18,14);
         &_w {
             font-style: italic;
         }
-        @media (max-width:2000px) {
-            font-size: 30px;
-            max-width: 600px;
-            margin: 20px 15px 20px 15px;
-        }
     }
     &__text-container {
-        margin: 0 0 115px 0;
-        @include responsive-size(margin-bottom,70,30);
+        @include responsive-size(margin-bottom,55,25);
     }
 
     &__img-q {
@@ -181,10 +147,9 @@
         &:last-child {
             transform: rotate(180deg);
         }
-        @media (max-width:800px) {
-            img {
-                width: 25px;
-            }
+        
+        img {
+            width: 25px;
         }
     }
 
@@ -193,64 +158,38 @@
     &__row{
         display: flex;
         align-items: center;
-        margin: 0 -88px 135px -88px;
-        @media (max-width:2000px) { 
-            margin: 0 -38px 95px -38px;
-        }
-        @media (max-width:1300px) { 
-            margin: 0 -8px 65px -8px;
-        }
-        @media (max-width:970px) {
-            flex-direction: column;
-        }
-        @media (max-width:800px) {
-            margin: 0 0 25px 0;
-            
-        }
+        @include responsive-size(margin-bottom,60,20);
     }
 
     &__column {
         flex:  0 1 50%; 
-        padding: 0 88px;
-        @media (max-width:2000px) { 
-            padding: 0 38px;
-            
-        }
-        @media (max-width:1500px) {
-            img {
-                transform: scale(0.7);
-            }
-        }
-        @media (max-width:1300px) { 
-            padding: 0;
-        }
-        
+        padding: 0 45px;
+        @include responsive-size(padding-right,45,20);
+        @include responsive-size(padding-left,45,20);
+
     }
 
     &__copy {
         p {
-            font-size: 28px;
-            line-height: 14px;
+            font-size: 14px;
+            line-height: 24px;
             font-weight: 300;
             color: #000000;
-            @include responsive-size(font-size,24,16);
         }
     }
     &__copyrite {
-        margin: 30px 0 0 0;
-        display: flex;
-        align-items: center;
+        margin: 15px 0 0 0;
         span {
-            font-size: 28px;
+            font-size: 10px;
             font-weight: 300;
             color: #191919;
-            @include responsive-size(font-size,24,16);
         }
+        font-size: 14px;
     }
 }
 .fa-heart {
-    font-size: 26px;
-    line-height: 48px;
+    font-size: 13px;
+    line-height: 24px;
     font-weight: 400;
     color: #000000;
 }
