--- a/Rest/css/style.css
+++ b/Rest/css/style.css
@@ -147,10 +147,10 @@ h6 {
 }
 
 body {
-  font-family: "Open Sans Condensed";
+  font-family: "Open Sans Condensed", sans-serif;
 }
 
-body.lock {
+body._lock {
   overflow: hidden;
 }
 
@@ -2364,11 +2364,20 @@ body.lock {
 }
 
 .header {
-  position: absolute;
+  position: fixed;
   width: 100%;
   z-index: 50;
   left: 0;
-  top: 127px;
+  top: 87px;
+}
+
+.header._height {
+  top: 0;
+}
+
+.header._active {
+  top: 0px;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .header__row {
@@ -3587,21 +3596,6 @@ button.swiper-pagination-bullet {
   left: 0;
 }
 
-.item__text {
-  line-height: 1.2;
-  font-weight: 300;
-  letter-spacing: 0.025em;
-  color: #ffffff;
-  z-index: 2;
-  position: relative;
-  margin: 16px 0 0 0;
-  max-width: 820px;
-  text-align: center;
-  margin: 0 10px;
-  font-size: 16px;
-  margin-top: 20px;
-}
-
 .item__logo {
   position: absolute;
   width: 100%;
@@ -3629,7 +3623,7 @@ button.swiper-pagination-bullet {
   margin-bottom: 20px;
 }
 
-.item__logo span {
+.item__title {
   font-family: "PlayfairDisplaySC-Regular";
   line-height: 1.2;
   font-weight: 400;
@@ -3637,6 +3631,21 @@ button.swiper-pagination-bullet {
   letter-spacing: 0.025em;
   color: #ffffff;
   font-size: 24px;
+}
+
+.item__text {
+  line-height: 1.2;
+  font-weight: 300;
+  letter-spacing: 0.025em;
+  color: #ffffff;
+  z-index: 2;
+  position: relative;
+  margin: 16px 0 0 0;
+  max-width: 820px;
+  text-align: center;
+  margin: 0 10px;
+  font-size: 16px;
+  margin-top: 20px;
 }
 
 .slider {
@@ -4197,7 +4206,6 @@ button.swiper-pagination-bullet {
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   border-radius: 12px;
-  line-height: 48px;
   font-weight: 300;
   letter-spacing: 0.02em;
   color: #ffffff;
@@ -4205,10 +4213,10 @@ button.swiper-pagination-bullet {
       -ms-grid-row-align: center;
       align-self: center;
   font-size: 18px;
-  padding-bottom: 15px;
-  padding-top: 15px;
-  padding-left: 150px;
-  padding-right: 150px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  padding-left: 130px;
+  padding-right: 130px;
 }
 
 .form-reserv__checkbox {
@@ -4320,6 +4328,12 @@ button.swiper-pagination-bullet {
   font-size: 16px;
 }
 
+@media (min-width: 767.98px) {
+  .header {
+    padding: 20px 0;
+  }
+}
+
 @media (max-width: 1450px) {
   .explore__container {
     -webkit-box-orient: vertical;
@@ -4331,7 +4345,7 @@ button.swiper-pagination-bullet {
 
 @media (max-width: 1170px) {
   .header {
-    top: calc(30px + (127 - 30) * ((100vw - 320px) / (1170 - 320)));
+    top: calc(30px + (87 - 30) * ((100vw - 320px) / (1170 - 320)));
   }
 
   .menu__item:not(:last-child) {
@@ -4418,20 +4432,20 @@ button.swiper-pagination-bullet {
     font-size: calc(18px + (30 - 18) * ((100vw - 320px) / (1170 - 320)));
   }
 
+  .item__logo img {
+    margin-bottom: calc(10px + (20 - 10) * ((100vw - 320px) / (1170 - 320)));
+  }
+
+  .item__title {
+    font-size: calc(16px + (24 - 16) * ((100vw - 320px) / (1170 - 320)));
+  }
+
   .item__text {
     font-size: calc(14px + (16 - 14) * ((100vw - 320px) / (1170 - 320)));
   }
 
   .item__text {
     margin-top: calc(10px + (20 - 10) * ((100vw - 320px) / (1170 - 320)));
-  }
-
-  .item__logo img {
-    margin-bottom: calc(10px + (20 - 10) * ((100vw - 320px) / (1170 - 320)));
-  }
-
-  .item__logo span {
-    font-size: calc(16px + (24 - 16) * ((100vw - 320px) / (1170 - 320)));
   }
 
   .slider {
@@ -4615,19 +4629,19 @@ button.swiper-pagination-bullet {
   }
 
   .form-reserv__button {
-    padding-bottom: calc(5px + (15 - 5) * ((100vw - 320px) / (1170 - 320)));
+    padding-bottom: calc(5px + (20 - 5) * ((100vw - 320px) / (1170 - 320)));
   }
 
   .form-reserv__button {
-    padding-top: calc(5px + (15 - 5) * ((100vw - 320px) / (1170 - 320)));
+    padding-top: calc(5px + (20 - 5) * ((100vw - 320px) / (1170 - 320)));
   }
 
   .form-reserv__button {
-    padding-left: calc(30px + (150 - 30) * ((100vw - 320px) / (1170 - 320)));
+    padding-left: calc(30px + (130 - 30) * ((100vw - 320px) / (1170 - 320)));
   }
 
   .form-reserv__button {
-    padding-right: calc(30px + (150 - 30) * ((100vw - 320px) / (1170 - 320)));
+    padding-right: calc(30px + (130 - 30) * ((100vw - 320px) / (1170 - 320)));
   }
 
   .checkbox-label {
@@ -4976,6 +4990,14 @@ button.swiper-pagination-bullet {
 }
 @supports (-webkit-appearance:none){
 .popup__info li{background:url("../img/icons/nail.webp") left no-repeat}
+}
+
+ @media (min-width: 767.98px){
+
+@supports (-webkit-appearance:none){
+
+}
+
 }
 
  @media (max-width: 1450px){
